--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" href="velogit/images/logo/favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React + TS</title>
+        <meta property="og:title" content="Velogit — GitHub Pages Blog Platform" />
+        <meta
+            property="og:description"
+            content="A lightweight, developer-friendly blogging platform integrated with GitHub Pages."
+        />
+        <meta
+            property="og:image"
+            content="https://letyuchan.github.io/velogit/images/logo/logo.png"
+        />
+
+        <meta property="og:url" content="https://letyuchan.github.io/velogit/" />
+        <meta property="og:type" content="website" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Velogit — GitHub Pages Blog Platform" />
+        <meta
+            name="twitter:description"
+            content="A lightweight, developer-friendly blogging platform integrated with GitHub Pages."
+        />
+        <meta
+            name="twitter:image"
+            content="https://letyuchan.github.io/velogit/images/logo/logo.png"
+        />
+        <meta name="twitter:url" content="https://letyuchan.github.io/velogit/" />
+        <title>velogit</title>
     </head>
     <body>
         <div id="root"></div>
