--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="velogit/images/logo/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="/images/logo/favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="Velogit — GitHub Pages Blog Platform" />
         <meta
