feat, style: HelpModal OpenGraph 세팅 내용 추가 | CaregoryListBar 위치 및 디자인 수정

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
             property="og:description"
             content="A lightweight, developer-friendly blogging platform integrated with GitHub Pages."
         />
+        <!-- here ↓  -->
         <meta
             property="og:image"
             content="https://letyuchan.github.io/velogit/images/system/logo/logo.png"
         />
-
+        <!-- here ↓  -->
         <meta property="og:url" content="https://letyuchan.github.io/velogit/" />
         <meta property="og:type" content="website" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -22,10 +23,12 @@
             name="twitter:description"
             content="A lightweight, developer-friendly blogging platform integrated with GitHub Pages."
         />
+        <!-- here ↓  -->
         <meta
             name="twitter:image"
             content="https://letyuchan.github.io/velogit/images/system/logo/logo.png"
         />
+        <!-- here ↓  -->
         <meta name="twitter:url" content="https://letyuchan.github.io/velogit/" />
         <title>velogit</title>
     </head>
